[gd_scene load_steps=22 format=2]

[ext_resource path="res://ships/ship.gd" type="Script" id=1]
[ext_resource path="res://Camera2D.gd" type="Script" id=2]
[ext_resource path="res://ships/falcon1.png" type="Texture" id=3]
[ext_resource path="res://ships/falcon-dualLasers.png" type="Texture" id=4]
[ext_resource path="res://ships/Weapon.gd" type="Script" id=5]
[ext_resource path="res://bullets/Missile.tscn" type="PackedScene" id=6]
[ext_resource path="res://effects/chunk-pneumatic.wav" type="AudioStream" id=7]
[ext_resource path="res://ships/FalconDual Lasers.png" type="Texture" id=8]
[ext_resource path="res://bullets/Laser.tscn" type="PackedScene" id=9]
[ext_resource path="res://effects/laser.wav" type="AudioStream" id=10]
[ext_resource path="res://ships/thrust.png" type="Texture" id=11]
[ext_resource path="res://ships/fireSound.ogg" type="AudioStream" id=12]
[ext_resource path="res://ships/Magnet.gd" type="Script" id=13]
[ext_resource path="res://effects/crash.ogg" type="AudioStream" id=14]
[ext_resource path="res://effects/inventoryFull.wav" type="AudioStream" id=15]
[ext_resource path="res://effects/CoordinatesReceived.wav" type="AudioStream" id=16]
[ext_resource path="res://effects/shields.png" type="Texture" id=17]
[ext_resource path="res://effects/shields.wav" type="AudioStream" id=18]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 29.8351, 31.1695 )

[sub_resource type="CircleShape2D" id=2]
radius = 283.598

[sub_resource type="Animation" id=3]
resource_name = "shields"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Shield/ShieldNoise:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shield:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.45, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shield:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.439216, 0.854902, 0.34902, 0 ), Color( 0.439216, 0.854902, 0.34902, 1 ), Color( 0.439216, 0.854902, 0.34902, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Shield:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.05, 0.15, 0.25, 0.35, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ), Vector2( 0.45, 0.5 ), Vector2( 0.5, 0.5 ), Vector2( 0.5, 0.58 ), Vector2( 0.3, 0.3 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Shield:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.05, 0.15, 0.35, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 3.0, -5.0, 0.0 ]
}

[node name="Ship" type="RigidBody2D"]
collision_mask = 7
contacts_reported = 5
contact_monitor = true
linear_damp = 0.1
angular_damp = 5.0
script = ExtResource( 1 )
MaxThrust = 3500.0
ThrustIncrement = 800.0
SpinThrust = 25000.0
MaxSpeed = 5500.0

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 3, 3 )
smoothing_enabled = true
smoothing_speed = 13.97
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
script = ExtResource( 2 )

[node name="Body" type="Sprite" parent="."]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Weapons" type="Node2D" parent="."]

[node name="MissileLaunchers" type="Sprite" parent="Weapons"]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 4 )
script = ExtResource( 5 )
Bullet = ExtResource( 6 )

[node name="Muzzles" type="Node2D" parent="Weapons/MissileLaunchers"]

[node name="Port" type="Position2D" parent="Weapons/MissileLaunchers/Muzzles"]
position = Vector2( 232.53, -232.94 )

[node name="Starboard" type="Position2D" parent="Weapons/MissileLaunchers/Muzzles"]
position = Vector2( 232.53, 232.94 )

[node name="ReloadTimer" type="Timer" parent="Weapons/MissileLaunchers"]
wait_time = 0.6
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Weapons/MissileLaunchers"]
stream = ExtResource( 7 )
volume_db = -38.0

[node name="DualLasers" type="Sprite" parent="Weapons"]
scale = Vector2( 0.15, 0.1 )
texture = ExtResource( 8 )
script = ExtResource( 5 )
Bullet = ExtResource( 9 )
Delay = 0.01

[node name="Muzzles" type="Node2D" parent="Weapons/DualLasers"]

[node name="Port" type="Position2D" parent="Weapons/DualLasers/Muzzles"]
position = Vector2( 300, -175 )
rotation = 0.0349066

[node name="Starboard" type="Position2D" parent="Weapons/DualLasers/Muzzles"]
position = Vector2( 300, 175 )
rotation = -0.0349066

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Weapons/DualLasers"]
stream = ExtResource( 10 )
volume_db = -40.0

[node name="ReloadTimer" type="Timer" parent="Weapons/DualLasers"]
wait_time = 0.3
one_shot = true

[node name="thrust" type="Sprite" parent="."]
position = Vector2( -92.0937, 0.554779 )
texture = ExtResource( 11 )

[node name="EngineNoise" type="AudioStreamPlayer" parent="thrust"]
stream = ExtResource( 12 )
volume_db = -29.62

[node name="Magnet" type="Area2D" parent="."]
collision_mask = 16
script = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Magnet"]
visible = false
shape = SubResource( 2 )

[node name="PopupEffects" type="Node2D" parent="."]

[node name="CrashNoise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )
volume_db = -23.347

[node name="InventoryFullNoise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )
volume_db = -9.0

[node name="CoordinatesReceivedNoise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 16 )
volume_db = -9.0

[node name="Shield" type="Sprite" parent="."]
visible = false
self_modulate = Color( 0.439216, 0.854902, 0.34902, 0 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 17 )

[node name="ShieldNoise" type="AudioStreamPlayer2D" parent="Shield"]
stream = ExtResource( 18 )
volume_db = -9.0

[node name="ShieldTimer" type="Timer" parent="Shield"]
wait_time = 0.4

[node name="ShieldRechargeTimer" type="Timer" parent="Shield"]
wait_time = 3.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/shields = SubResource( 3 )

[connection signal="timeout" from="Weapons/MissileLaunchers/ReloadTimer" to="Weapons/MissileLaunchers" method="_on_ReloadTimer_timeout"]
[connection signal="finished" from="InventoryFullNoise" to="." method="_on_InventoryFullNoise_finished"]
[connection signal="timeout" from="Shield/ShieldRechargeTimer" to="." method="_on_ShieldRechargeTimer_timeout"]
